fix:배포 스텝을 .vercel/output/static가 아니라 .vercel/output 전체를 올리도록 변경

--- a/.github/workflows/deploy-user-front.yml
+++ b/.github/workflows/deploy-user-front.yml
@@ -50,8 +50,12 @@ jobs:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CF_PAGES_PROJECT: ${{ secrets.CF_PAGES_PROJECT }}
         run: |
+          echo "Build output:"
+          ls -la .vercel/output || true
+          ls -la .vercel/output/static || true
+          ls -la .vercel/output/functions || true
           npx wrangler pages deploy \
-            .vercel/output/static \
+            .vercel/output \
             --project-name="${{ secrets.CF_PAGES_PROJECT }}" \
             --branch="${{ github.ref_name }}"
 
