--- a/.github/workflows/deploy-user-front.yml
+++ b/.github/workflows/deploy-user-front.yml
@@ -44,6 +44,33 @@ jobs:
           # Ensure the Pages project exists
           npx wrangler pages project list | grep -i -w "$CF_PAGES_PROJECT" || { echo "Pages project '$CF_PAGES_PROJECT' not found in account $CLOUDFLARE_ACCOUNT_ID"; exit 1; }
 
+      - name: Ensure Pages compatibility flags (nodejs_compat) for preview and production
+        if: env.CF_PAGES_PROJECT != ''
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CF_PAGES_PROJECT: ${{ secrets.CF_PAGES_PROJECT }}
+        run: |
+          cat > body.json <<'JSON'
+          {
+            "deployment_configs": {
+              "production": {
+                "compatibility_date": "2024-11-01",
+                "compatibility_flags": ["nodejs_compat"]
+              },
+              "preview": {
+                "compatibility_date": "2024-11-01",
+                "compatibility_flags": ["nodejs_compat"]
+              }
+            }
+          }
+          JSON
+          curl -sS -X PATCH "https://api.cloudflare.com/client/v4/accounts/${CLOUDFLARE_ACCOUNT_ID}/pages/projects/${CF_PAGES_PROJECT}" \
+            -H "Authorization: Bearer ${CLOUDFLARE_API_TOKEN}" \
+            -H "Content-Type: application/json" \
+            --data @body.json | tee /tmp/cf_update.json
+          grep -q '"success":true' /tmp/cf_update.json || { echo "Failed to set compatibility flags for project ${CF_PAGES_PROJECT}"; cat /tmp/cf_update.json; exit 1; }
+
       - name: Deploy to Cloudflare Pages
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
