feat(web): Next.js 배포를 Cloudflare Pages → EC2+ALB(Docker)로 전환
- web Dockerfile 추가 및 Node 런타임 기반 실행(npm start, 3000)
- GitHub Actions: deploy-web-ec2.yml 신설(이미지 빌드/푸시 → Terraform Apply)
- Terraform: web.tf / userdata-web.sh / variables 추가
  - ALB HostHeader 규칙 → Web Target Group 라우팅
  - Route53 루트/WWW ALIAS(옵션) 지원
- 프론트 환경 변수 주입: WEB_* 입력으로 컨테이너 .env 생성
- jwt.ts: Buffer 의존 제거(Edge/Web 호환 atob + TextDecoder)
- Pages 경로는 보류: deploy-user-front.yml에서 nodejs_compat 자동 설정(안정화 전까지 EC2 권장)
- README: 배포 가이드 업데이트(EC2+ALB를 권장 경로로 명시)

--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -23,7 +23,7 @@ jobs:
             package-lock.json
       - run: npm install --no-audit --no-fund
       - run: npm run lint
-      - name: Build (Cloudflare Pages - next-on-pages)
-        run: npm run build:pages
+      - name: Build (Next.js)
+        run: npm run build
 
 
