--- a/sigbang_user_front/package.json
+++ b/sigbang_user_front/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "build:pages": "npx @cloudflare/next-on-pages@latest",
-    "preview:pages": "npx wrangler pages dev .vercel/output/static --functions .vercel/output/functions --compatibility-date=2024-11-01"
+    "lint": "eslint"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
@@ -25,8 +23,6 @@
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^16.0.1",
     "@tailwindcss/postcss": "^4",
-    "@cloudflare/next-on-pages": "latest",
-    "wrangler": "^4.50.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
