chore: removed Terraform apply from API/Web deploys and replaced
API: main 머지 시 이미지 빌드/푸시 후 SSM으로 각 인스턴스에서 docker pull → 컨테이너 재시작 → 헬스체크. Terraform apply는 더 이상 실행되지 않습니다.
Web: 동일하게 SSM 기반으로 자동 배포. Terraform apply 제거.
Infra: PR/푸시에서 fmt/validate/init/plan 수행. tfvars는 시크릿에서 주입, AWS 크레덴셜로 실제 상태 대비 plan만 출력.
변경 파일
.github/workflows/api-deploy.yml: Terraform apply 제거, SSM 배포(job: deploy-api-ssm) 추가. 타겟 태그는 Name=sigbang-api-api 입니다.
.github/workflows/deploy-web-ec2.yml: Terraform apply 제거, SSM 배포(job: deploy-web-ssm) 추가. 타겟 태그는 Name=sigbang-web 입니다.
.github/workflows/terraform.yml: tfvars 시크릿 작성, AWS 크레덴셜 구성, terraform init -reconfigure, terraform plan 추가.
주의
현재는 무중단 배포를 강제하지 않도록 SSM max-concurrency를 100%로 설정했어요. 서비스 확장 시 ASG 최소 2대로 올리고 순차/롤링(또는 ASG Instance Refresh)로 바꿔 무중단 전환하면 됩니다.
SSM Agent 및 EC2 IAM 권한(Instance Profile)이 이미 설정되어 있어야 합니다. 여러분의 Terraform 템플릿에 해당 설정이 포함된 것을 확인했습니다.
API 인스턴스 Name 태그가 sigbang-api-api로 설정되어 있으니, 변경 시 워크플로의 TARGET_NAME_TAG도 같이 맞춰주세요.
요약
Infra는 plan-only로 단순/안전화.
API/Web은 main 머지 시 자동 배포되지만, 인프라 변경 없이 SSM으로 컨테이너만 교체.
무중단은 추후 확장 시 ASG 설정과 동시성만 조정하면 쉽게 전환 가능합니다.

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -54,49 +54,51 @@ jobs:
           cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:latest
           cache-to: type=inline
 
-  infra-apply:
+  deploy-api-ssm:
     needs: build-and-push
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: sigbang_infra
-    env:
-      TF_IN_AUTOMATION: true
-      AWS_REGION: ap-northeast-2
-      TF_VAR_api_image: ${{ needs.build-and-push.outputs.image }}
-      TF_VAR_manage_ssm: "false"
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v4
-
-      - name: Write terraform.tfvars from secret
-        working-directory: sigbang_infra
-        env:
-          TFVARS_PROD: ${{ secrets.TFVARS_PROD }}
-        run: |
-          echo "$TFVARS_PROD" > terraform.tfvars
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.9.8
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Terraform Init
-        run: terraform init -reconfigure -input=false
-
-      - name: Terraform Validate
-        run: terraform validate
-
-      - name: Terraform Plan
-        run: terraform plan -input=false -var="api_image=${{ needs.build-and-push.outputs.image }}" -var="manage_ssm=false"
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve -input=false -var="api_image=${{ needs.build-and-push.outputs.image }}" -var="manage_ssm=false"
+          aws-region: ap-northeast-2
+      - name: Deploy API via SSM (restart containers)
+        env:
+          IMAGE: ${{ needs.build-and-push.outputs.image }}
+          AWS_REGION: ap-northeast-2
+          # ASG Name tag value for API instances (from Terraform): "${var.project_name}-api" => "sigbang-api-api"
+          TARGET_NAME_TAG: sigbang-api-api
+        run: |
+          cat > params.json <<JSON
+          {
+            "commands": [
+              "set -euo pipefail",
+              "IMAGE='${IMAGE}'",
+              "ENV_FILE='/home/ubuntu/.env'",
+              "if [ -f \"$ENV_FILE\" ]; then set -a; . \"$ENV_FILE\"; set +a; fi",
+              "if echo \"$IMAGE\" | grep -q '^ghcr.io/'; then if [ -n \"${GHCR_USERNAME:-}\" ] && [ -n \"${GHCR_TOKEN:-}\" ]; then echo \"$GHCR_TOKEN\" | docker login ghcr.io -u \"$GHCR_USERNAME\" --password-stdin || true; fi; fi",
+              "docker pull \"$IMAGE\"",
+              "docker rm -f sigbang-api || true",
+              "docker run -d --name sigbang-api --restart=always --env-file \"$ENV_FILE\" -p 3000:3000 \"$IMAGE\"",
+              "sleep 3",
+              "curl -fsS http://localhost:3000/health || exit 1"
+            ]
+          }
+          JSON
+          aws ssm send-command \
+            --document-name "AWS-RunShellScript" \
+            --comment "Deploy API ${IMAGE}" \
+            --targets "Key=tag:Name,Values=${TARGET_NAME_TAG}" \
+            --parameters file://params.json \
+            --timeout-seconds 600 \
+            --max-concurrency "100%" \
+            --max-errors "0" \
+            --region "$AWS_REGION"
 
 
