--- a/.github/workflows/deploy-web-ec2.yml
+++ b/.github/workflows/deploy-web-ec2.yml
@@ -85,12 +85,12 @@ jobs:
               "set -x",
               "IMAGE='${IMAGE}'",
               "echo Using IMAGE=\\\"$IMAGE\\\"",
-              "ENV_FILE='/home/ubuntu/web.env'",
               "if echo \"$IMAGE\" | grep -q '^ghcr.io/'; then if [ -n \"${GHCR_USERNAME:-}\" ] && [ -n \"${GHCR_TOKEN:-}\" ]; then echo \"$GHCR_TOKEN\" | docker login ghcr.io -u \"$GHCR_USERNAME\" --password-stdin || true; fi; fi",
               "docker pull \"$IMAGE\"",
               "docker image inspect \"$IMAGE\" --format 'RepoDigests={{json .RepoDigests}}' || true",
+              "docker ps --filter \"publish=${EXPOSE_PORT}\" -q | xargs -r docker rm -f || true",
               "docker rm -f ${CONTAINER_NAME} || true",
-              "docker run --pull=always -d --name ${CONTAINER_NAME} --restart=always --env-file \"$ENV_FILE\" -p ${EXPOSE_PORT}:3000 \"$IMAGE\"",
+              "[ -f /home/ubuntu/web.env ] && ENV_FILE_ARG='--env-file /home/ubuntu/web.env' || ENV_FILE_ARG=''; docker run --pull=always -d --name ${CONTAINER_NAME} --restart=always $ENV_FILE_ARG -p ${EXPOSE_PORT}:3000 \"$IMAGE\"",
               "sleep 3",
               "curl -fsS --retry 12 --retry-all-errors --max-time 5 http://localhost:${EXPOSE_PORT}/robots.txt || exit 1",
               "docker ps -a",
