chore: 로그를 인스턴스에 남기기

--- a/.github/workflows/deploy-web-ec2.yml
+++ b/.github/workflows/deploy-web-ec2.yml
@@ -85,20 +85,27 @@ jobs:
               "set -x",
               "IMAGE='${IMAGE}'",
               "echo Using IMAGE=$IMAGE",
+              "LOG_DIR=/var/log/sigbang-web",
+              "mkdir -p \"$LOG_DIR\" || true",
+              "LOG_TS=$(date +%Y%m%dT%H%M%S%z)",
+              "LOG_FILE=$LOG_DIR/deploy-$LOG_TS.log",
+              "echo \"=== Deploy start: $(date -Is) ===\" | tee -a \"$LOG_FILE\"",
+              "echo \"IMAGE=$IMAGE CONTAINER=${CONTAINER_NAME} PORT=${EXPOSE_PORT}\" | tee -a \"$LOG_FILE\"",
               "if echo \"$IMAGE\" | grep -q '^ghcr.io/'; then if [ -n \"${GHCR_USERNAME:-}\" ] && [ -n \"${GHCR_TOKEN:-}\" ]; then echo \"$GHCR_TOKEN\" | docker login ghcr.io -u \"$GHCR_USERNAME\" --password-stdin || true; fi; fi",
-              "docker pull \"$IMAGE\"",
-              "docker image inspect \"$IMAGE\" --format 'RepoDigests={{json .RepoDigests}}' || true",
-              "docker ps --filter \"publish=${EXPOSE_PORT}\" -q | xargs -r docker rm -f || true",
-              "docker rm -f ${CONTAINER_NAME} || true",
-              "[ -f /home/ubuntu/web.env ] && ENV_FILE_ARG='--env-file /home/ubuntu/web.env' || ENV_FILE_ARG=''; docker run --pull=always -d --name ${CONTAINER_NAME} --restart=always $ENV_FILE_ARG -p ${EXPOSE_PORT}:3000 \"$IMAGE\"",
+              "docker pull \"$IMAGE\" 2>&1 | tee -a \"$LOG_FILE\"",
+              "docker image inspect \"$IMAGE\" --format 'RepoDigests={{json .RepoDigests}}' 2>&1 | tee -a \"$LOG_FILE\" || true",
+              "docker ps --filter \"publish=${EXPOSE_PORT}\" -q | xargs -r docker rm -f 2>&1 | tee -a \"$LOG_FILE\" || true",
+              "docker rm -f ${CONTAINER_NAME} 2>&1 | tee -a \"$LOG_FILE\" || true",
+              "[ -f /home/ubuntu/web.env ] && ENV_FILE_ARG='--env-file /home/ubuntu/web.env' || ENV_FILE_ARG=''; docker run --pull=always -d --name ${CONTAINER_NAME} --restart=always $ENV_FILE_ARG -p ${EXPOSE_PORT}:3000 \"$IMAGE\" 2>&1 | tee -a \"$LOG_FILE\"",
               "sleep 3",
-              "curl -fsS --retry 12 --retry-all-errors --max-time 5 http://localhost:${EXPOSE_PORT}/robots.txt || exit 1",
-              "docker ps -a",
-              "docker inspect -f 'Name={{.Name}} State={{.State.Status}} Image={{.Config.Image}}' ${CONTAINER_NAME} || true",
-              "docker image inspect \"$IMAGE\" --format 'Id={{.Id}} RepoTags={{json .RepoTags}} RepoDigests={{json .RepoDigests}}' || true",
-              "docker logs --tail 200 ${CONTAINER_NAME} || true",
-              "echo '=== Sample HTML ==='",
-              "curl -fsS http://localhost:${EXPOSE_PORT}/ | head -n 40 || true"
+              "curl -fsS --retry 12 --retry-all-errors --max-time 5 http://localhost:${EXPOSE_PORT}/robots.txt 2>&1 | tee -a \"$LOG_FILE\" || exit 1",
+              "docker ps -a 2>&1 | tee -a \"$LOG_FILE\"",
+              "docker inspect -f 'Name={{.Name}} State={{.State.Status}} Image={{.Config.Image}}' ${CONTAINER_NAME} 2>&1 | tee -a \"$LOG_FILE\" || true",
+              "docker image inspect \"$IMAGE\" --format 'Id={{.Id}} RepoTags={{json .RepoTags}} RepoDigests={{json .RepoDigests}}' 2>&1 | tee -a \"$LOG_FILE\" || true",
+              "docker logs --tail 200 ${CONTAINER_NAME} 2>&1 | tee -a \"$LOG_FILE\" || true",
+              "echo '=== Sample HTML ===' | tee -a \"$LOG_FILE\"",
+              "curl -fsS http://localhost:${EXPOSE_PORT}/ | head -n 40 2>&1 | tee -a \"$LOG_FILE\" || true",
+              "echo \"=== Deploy end: $(date -Is) ===\" | tee -a \"$LOG_FILE\""
             ]
           }
           JSON
